--- a/src/css/index.css
+++ b/src/css/index.css
@@ -30,11 +30,25 @@ body {
 h1 {
   font-family: var(--YoungSerif);
   color: var(--Stone900);
-  font-size: 2rem;
+  font-size: 2.4rem;
+  font-weight: 400;
+  padding: 2rem 0 1rem 0;
 }
 
 h2 {
   color: var(--rown800);
   font-family: var(--YoungSerif);
   font-weight: 400;
+  margin-bottom: 1rem;
+}
+
+ul {
+  list-style: disc inside;
+  width: 80%;
+  line-height: 2;
+}
+
+.bottom-line {
+  padding-bottom: 1rem;
+  border-bottom: 1px solid var(--Stone150);
 }
