style: add mediaqueries for desktop screen

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,3 +2,11 @@ header {
   content: url(../../..//images/image-omelette.webp);
   max-width: 100%;
 }
+
+@media screen and (min-width: 1024px) {
+  header {
+    margin: 0 auto;
+    border-radius: 16px;
+    margin-top: 2rem;
+  }
+}
