--- a/src/css/index.css
+++ b/src/css/index.css
@@ -30,9 +30,10 @@ body {
 h1 {
   font-family: var(--YoungSerif);
   color: var(--Stone900);
-  font-size: 2.4rem;
+  font-size: 2.2rem;
   font-weight: 400;
   padding: 2rem 0 1rem 0;
+  line-height: 1;
 }
 
 h2 {
@@ -44,7 +45,6 @@ h2 {
 
 ul {
   list-style: disc inside;
-  width: 80%;
   line-height: 2;
 }
 
