--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,9 @@
 footer {
-  margin-top: 2rem;
-  padding: 2rem;
+  border-top: 1px solid var(--Stone150);
+  padding-top: 1rem;
   line-height: 1.5;
   text-align: center;
+  margin-top: 1rem;
 }
 
 footer a {
