--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,7 +2,18 @@ main {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  width: 90vw;
-  max-width: 1440px;
   margin: 0 auto;
+  background-color: var(--White);
+}
+
+@media screen and (min-width: 1024px) {
+  main {
+    padding: 0 1rem;
+    width: 90vw;
+    max-width: 1024px;
+    padding: 2rem;
+    margin: 8vh auto;
+    border-radius: 16px;
+    box-shadow: 1px 1px 10px var(--Stone150);
+  }
 }
