--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,9 @@
 footer {
-  border-top: 1px solid var(--Stone150);
-  padding-top: 1rem;
+  border-block-start: 1px solid var(--Stone150);
+  padding-block-start: 1rem;
   line-height: 1.5;
   text-align: center;
-  margin-top: 1rem;
+  padding-block-end: 1rem;
 }
 
 footer a {
