--- a/src/components/Instructions/Instructions.css
+++ b/src/components/Instructions/Instructions.css
@@ -1,12 +1,12 @@
 .instructions ol {
   list-style: decimal outside;
-  max-width: 800px;
+  max-width: 50rem;
 }
 
 .instructions ol li {
-  margin-left: 1rem;
-  padding-left: 1rem;
-  margin-bottom: 1rem;
+  margin-inline-start: 1rem;
+  padding-inline-start: 1rem;
+  margin-block-end: 1rem;
 }
 
 .instructions li::marker {
