--- a/src/components/Nutrition/Nutrition.css
+++ b/src/components/Nutrition/Nutrition.css
@@ -1,7 +1,7 @@
 .nutrition table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 1rem;
+  margin-block-start: 1rem;
 }
 
 .nutrition td {
@@ -10,7 +10,7 @@
 }
 
 .nutrition td:first-child {
-  padding-left: 2rem;
+  padding-inline-start: 2rem;
 }
 
 .nutrition td:last-child {
@@ -18,7 +18,7 @@
   color: var(--rown800);
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 64rem) {
   .nutrition td:last-child {
     width: 60%;
   }
