--- a/src/css/index.css
+++ b/src/css/index.css
@@ -19,13 +19,16 @@
 }
 
 body {
-  min-width: 375px;
-  max-width: 1440px;
-  font-size: 1rem;
-  font-family: var(--Outfit);
+  min-width: 23.5rem;
+  max-width: 90rem;
   color: var(--Stone600);
   margin: 0 auto;
   background-color: var(--Stone100);
+}
+
+html {
+  font-size: 1rem;
+  font-family: var(--Outfit);
 }
 
 h1 {
@@ -33,7 +36,7 @@ h1 {
   color: var(--Stone900);
   font-size: 2.2rem;
   font-weight: 400;
-  padding-bottom: 1rem;
+  padding-block-end: 1rem;
   line-height: 1;
 }
 
@@ -41,7 +44,7 @@ h2 {
   color: var(--rown800);
   font-family: var(--YoungSerif);
   font-weight: 400;
-  margin-bottom: 1rem;
+  margin-block-end: 1rem;
 }
 
 ul {
@@ -50,11 +53,11 @@ ul {
 }
 
 .bottom-line {
-  padding-bottom: 1rem;
+  padding-block-end: 1rem;
   border-bottom: 1px solid var(--Stone150);
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 64rem) {
   .mobile-padding {
     padding: 0 1rem;
   }
